fixed wrong height our beers view main container

--- a/src/styles/ourbeers.css
+++ b/src/styles/ourbeers.css
@@ -12,6 +12,7 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
     height:90vh;
     gap:1rem;
+    margin-top: var(--header-height);
     width:90vw;
 }
 
